// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMessage renders correctly if an error message is provided 1`] = `
<div
  className=""
  id="notfound-wrapper"
>
  <div
    className="alert alert-danger"
  >
    Something crazy happened!
  </div>
  <hr />
</div>
`;

exports[`ErrorMessage renders correctly if no message is provided 1`] = `
<div
  className="display-none"
  id="notfound-wrapper"
>
  <div
    className="alert alert-danger"
  >
    
  </div>
  <hr />
</div>
`;
